<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.github.ugurcany.citiesbb.ui.cities.CitiesViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_text_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:hint="@string/hint_search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:text="@={viewModel.searchInput}"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_cities"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_cities"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_search"
            app:layout_constraintVertical_weight="1"
            tools:listitem="@layout/view_city_item" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/message_no_city"
            android:visibility="@{viewModel.noResultMsgVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_search"
            app:layout_constraintVertical_weight="1" />

    </android.support.constraint.ConstraintLayout>

</layout>